--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="nature">nature</string>
     <string name="more">Подробно</string>
     <string name="input_text">Введите текст для поиска фото</string>
+    <string name="adress">Адрес в сети Интернет</string>
 </resources>
