--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="more">Подробно</string>
     <string name="input_text">Введите текст для поиска фото</string>
     <string name="adress">Адрес в сети Интернет</string>
+
+    <string name="forExit">Для выхода нажмите  НАЗАД  ещё раз</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="url">url</string>
+    <string name="fr_main_name">fragment_fragment_main</string>
 </resources>
