--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="url">url</string>
     <string name="fr_main_name">fragment_fragment_main</string>
+    <string name="app_name_branch">MVVM_Foto_Paging_Navigation</string>
 </resources>
